split and merge file

--- a/DFSClient/tests/CMakeLists.txt
+++ b/DFSClient/tests/CMakeLists.txt
@@ -7,8 +7,12 @@ set(GTEST_LIB gtest gtest_main)
 
 add_executable(test_checkSum utils/test_checkSum.cpp)
 
-target_link_libraries(test_checkSum gtest gtest_main)
-
 add_test(NAME test_checkSum COMMAND test_checkSum)
 
 target_link_libraries(test_checkSum gtest gtest_main utils)
+
+add_executable(test_splitFile utils/test_splitFile.cpp)
+
+add_test(NAME test_splitFile COMMAND test_splitFile test_mergeFile)
+
+target_link_libraries(test_splitFile gtest gtest_main utils)
