--- a/DFSClient/src/utils/CMakeLists.txt
+++ b/DFSClient/src/utils/CMakeLists.txt
@@ -4,3 +4,5 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 
 aux_source_directory(. UTILS)
 add_library(utils SHARED ${UTILS})
+
+target_link_libraries(utils PRIVATE glog::glog)
