--- a/DFSClient/src/Client/CMakeLists.txt
+++ b/DFSClient/src/Client/CMakeLists.txt
@@ -8,5 +8,9 @@ aux_source_directory(. CLIENT)
 
 add_library(Client STATIC ${CLIENT})
 
+target_link_libraries(Client PRIVATE dfsProto)
+
 target_link_libraries(Client PRIVATE gRPC::grpc++ gRPC::grpc++_reflection
         gRPC::gpr gRPC::grpc gRPC::grpc++ protobuf::libprotoc protobuf::libprotobuf protobuf::libprotobuf-lite)
+
+target_link_libraries(Client PRIVATE glog::glog)
