--- a/DFSClient/src/utils/CMakeLists.txt
+++ b/DFSClient/src/utils/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.22.1)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 
 aux_source_directory(. UTILS)
-add_library(utils SHARED ${UTILS})
+add_library(utils STATIC ${UTILS})
 
 target_link_libraries(utils PRIVATE glog::glog)
