--- a/DFSClient/src/CMakeLists.txt
+++ b/DFSClient/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.22.1)
 
 add_subdirectory(Client)
+add_subdirectory(DFSClient)
 add_subdirectory(utils)
 add_subdirectory(proto)
