--- a/Namenode/src/DatanodeManager/CMakeLists.txt
+++ b/Namenode/src/DatanodeManager/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.22.1)
 
 find_package(glog CONFIG REQUIRED)
 
-find_package(YAML-CPP REQUIRED)
+find_package(YAML-CPP CONFIG REQUIRED)
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 
