--- a/Namenode/src/NameSystem/CMakeLists.txt
+++ b/Namenode/src/NameSystem/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.22.1)
 
-find_package(YAML-CPP REQUIRED)
+find_package(YAML-CPP CONFIG REQUIRED)
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
+
 add_library(NameSystem SHARED NameSystem.cpp)
 
 target_link_libraries(NameSystem PRIVATE gRPC::grpc++ gRPC::grpc++_reflection
