--- a/DFSClient/configs/ClientConfig.yaml
+++ b/DFSClient/configs/ClientConfig.yaml
@@ -3,6 +3,9 @@
 # 
 
 # DFSClient:
+server_ip: "localhost"
+server_port: 8500
+
 upload_temp_file_dir: "/mnt/d/test/temp/upload"
 download_temp_file_dir: "/mnt/d/test/temp/download"
 client_name: "liuxiao"
