--- a/Datanode/CMakeLists.txt
+++ b/Datanode/CMakeLists.txt
@@ -31,3 +31,17 @@ target_link_libraries(DataNode PRIVATE gRPC::grpc++ gRPC::grpc++_reflection
 target_link_libraries(DataNode PRIVATE glog::glog yaml-cpp)
 
 target_link_libraries(DataNode PRIVATE dfsProto Client Server utils)
+
+add_custom_command(
+        OUTPUT
+        ${CMAKE_CURRENT_BINARY_DIR}/datanode.sh
+        COMMAND
+        ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/datanode.sh
+        ${CMAKE_CURRENT_BINARY_DIR}/datanode.sh
+        DEPENDS
+        ${CMAKE_CURRENT_SOURCE_DIR}/datanode.sh
+)
+
+target_sources(DataNode
+        PRIVATE
+        ${CMAKE_CURRENT_BINARY_DIR}/datanode.sh)
