--- a/Namenode/src/CMakeLists.txt
+++ b/Namenode/src/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.22.1)
 add_subdirectory(INode)
 add_subdirectory(NameSystem)
 add_subdirectory(DatanodeManager)
+add_subdirectory(CacheManager)
 add_subdirectory(BlockManager)
 add_subdirectory(Server)
 add_subdirectory(proto)
